cabal-version:      3.0
name:               eureka
version:            0.1.0.0
license:            BSD-3-Clause
author:             FbWdw
maintainer:         archimj@proton.me
build-type:         Simple

library
    ghc-options:      -Wall
    exposed-modules:  Board
    build-depends:    base ^>=4.18.2.1, vector, containers
    hs-source-dirs:   src
    default-language: GHC2021

executable Eureka
    ghc-options:      -Wall
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1, eureka, vector, containers
    hs-source-dirs:   src
    default-language: GHC2021
