cmake_minimum_required(VERSION 3.27)
project(Eureka)
add_compile_options(-fsanitize=undefined -fsanitize=address -g)
add_link_options(-fsanitize=undefined -fsanitize=address)
add_library(EurekaCore board.cpp constants.cpp search.cpp tt.cpp board.h constants.h search.h tt.h)
add_executable(EurekaTerminal perft.cpp terminal.cpp runInTerminal.cpp terminal.h perft.h)
target_link_libraries(EurekaTerminal PUBLIC EurekaCore)
add_executable(EurekaUCI runUCI.cpp uci.cpp uci.h)
target_link_libraries(EurekaUCI PUBLIC EurekaCore)
